# Django-REST-Template

./: .dockerignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  sample.env  tox.ini
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: commit_linting.yml  docker-image.yml  main.yml
server/: settings.py  urls.py
user/: serializers.py  tests.py  urls.py  views.py
