[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Krishap-s", email = "krishap.s.sreenivasan@gmail.com"},
]
dependencies = [
    "dj-database-url>=0.5.0",
    "python-dotenv>=0.20.0",
    "django==3.2",
    "djangorestframework>=3.13.1",
    "uvicorn>=0.18.2",
    "markdown>=3.3.7",
    "django-filter>=22.1",
    "whitenoise>=6.2.0",
    "psycopg2-binary>=2.9.3",
    "toml>=0.10.2",
    "djangorestframework-simplejwt>=5.2.0",
    "psycopg2>=2.9.3",
    "coverage>=6.4.1",
    "drf-spectacular>=0.22.1",
    "asgiref==3.7.2",
    "attrs==21.4.0",
    "click==8.1.3",
    "coverage==6.4.1",
    "dj-database-url==0.5.0",
    "django==3.2.13",
    "django-filter==22.1",
    "djangorestframework==3.13.1",
    "djangorestframework-simplejwt==5.2.2",
    "drf-spectacular==0.26.5",
    "filelock==3.7.1",
    "h11==0.13.0",
    "importlib-metadata==4.12.0",
    "importlib-resources==5.8.0",
    "inflection==0.5.1",
    "iniconfig==2.0.0",
    "isort==5.10.1",
    "jsonschema==4.6.1",
    "markdown==3.3.7",
    "packaging==21.3",
    "platformdirs==2.5.2",
    "pluggy==1.0.0",
    "psycopg2==2.9.9",
    "psycopg2-binary==2.9.3",
    "py==1.11.0",
    "pyjwt==2.4.0",
    "pyparsing==3.0.9",
    "pyrsistent==0.18.1",
    "pytest==7.1.2",
    "python-dotenv==0.20.0",
    "pytz==2022.7.1",
    "pyyaml==6.0",
    "six==1.16.0",
    "sqlparse==0.4.4",
    "toml==0.10.2",
    "tomli==2.0.1",
    "tox==4.13.0",
    "uritemplate==4.1.1",
    "uvicorn==0.20.0",
    "virtualenv==20.15.1",
    "whitenoise==6.2.0",
    "yapf==0.32.0",
    "zipp==3.8.0", "asgiref==3.7.2", "attrs==21.4.0", "click==8.1.3", "coverage==6.4.2", "distlib==0.3.5", "dj-database-url==0.5.0", "django==3.2.23", "django-filter==22.1", "djangorestframework==3.13.1", "djangorestframework-simplejwt==5.2.2", "drf-spectacular==0.26.5", "filelock==3.7.1", "h11==0.13.0", "importlib-metadata==4.12.0", "importlib-resources==5.8.0", "inflection==0.5.1", "iniconfig==2.0.0", "isort==5.10.1", "jsonschema==4.7.2", "markdown==3.4.1", "packaging==21.3", "platformdirs==2.5.2", "pluggy==1.0.0", "psycopg2==2.9.9", "psycopg2-binary==2.9.3", "py==1.11.0", "pyjwt==2.4.0", "pyparsing==3.0.9", "pyrsistent==0.18.1", "pytest==7.1.2", "python-dotenv==0.20.0", "pytz==2022.7.1", "PyYAML==6.0", "setuptools==65.5.1", "six==1.16.0", "sqlparse==0.4.4", "toml==0.10.2", "tomli==2.0.1", "tox==4.13.0", "uritemplate==4.1.1", "uvicorn==0.20.0", "virtualenv==20.15.1", "whitenoise==6.2.0", "yapf==0.32.0", "zipp==3.8.1"]
requires-python = ">=3.8"
license = {text = "MIT"}
[project.optional-dependencies]

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.1.2",
    "tox>=3.25.1",
]
dev = [
    "isort>=5.10.1",
    "yapf>=0.32.0",
]

[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[style]
based_on_style = "google"

